--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
         "tailwindcss": "^3.2.1",
         "vite": "^6.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "element-plus": "^2.9.3",
+        "flowbite": "^2.5.2"
     }
 }
