--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "prettier": "^3.3.0",
         "prettier-plugin-organize-imports": "^4.0.0",
         "prettier-plugin-tailwindcss": "^0.6.5",
+        "sass-embedded": "^1.83.4",
         "tailwindcss": "^3.2.1",
         "vite": "^6.0",
         "vue": "^3.4.0"
