feat: admission student form

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+MIDTRANS_SERVER_KEY=SB-Mid-server-a8aDlcbiLO946uvozw_vrhFU
+MIDTRANS_CLIENT_KEY=SB-Mid-client-pFPbk5E9vf_Gh3f3
+MIDTRANS_IS_PRODUCTION=false
+
