--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     # Configure the server
     server {
         listen       80;
-        server_name  localhost;
+        server_name  app.test;
         root         /var/www/html/public;
 
         index index.php index.html;
